<resources>
    <string name="welcome">Welcome to LingoBoost</string>
    <string name="login_button">Login</string>
    <string name="username_edit_hint">Enter your username here.</string>
    <string name="username_empty_msg">Username must not be empty</string>
    <string name="sleep_button">Start Sleep</string>
    <string name="settomgs_button">Settings</string>
    <string name="submit_button">Submit</string>
    <string name="skip_button">Skip</string>
    <string name="continue_button">Continue</string>
    <string name="test_words_button">Language Test</string>
    <string name="text_sleep_session">Place the phone in a comfortable position near you so that the speakers will remain unobstructed for clear audio.</string>
    <string name="test_word_text">Wordzzz</string>
    <string name="test_word_edit_hint">Translate this word to English</string>
    <string name="save_button">Save</string>
    <string name="text_volume">Volume</string>
    <string name="volume_change_required">You must adjust the volume before you can proceed.</string>
    <string name="text_device_media">Device Media</string>
    <string name="text_white_noise">White Noise</string>
    <string name="text_white_desc">Set the white noise to a volume that is comfortable for sleeping.</string>
    <string name="text_spoken_words">Spoken Words</string>
    <string name="text_words_volume">Word Volume</string>
    <string name="text_volume_next">Ready for @#8230;</string>
    <string name="pause_button">Pause</string>
    <string name="resume_button">Resume</string>
    <string name="cancel">Cancel</string>
    <string name="duolingo_button">Duolingo: Learn\nLanguages Free</string>
    <string name="text_download">Download</string>
    <string name="text_elapsed">Elapsed</string>
    <string name="text_current">Current</string>
    <string name="text_pause">Pause</string>
    <string name="text_quit">Quit</string>
    <string name="sleep_quit_confirmation">Quit this sleep session?</string>
    <string name="image_duolingo_content_description">Touch to download the Duolingo app</string>
    <string name="text_sri_international">SRI International</string>
    <string name="text_english_translations">English Translations:</string>

    <string name="default_server">lingoboost.csl.sri.com</string>
    <string name="server_root_path">lingoturk</string>
</resources>
