<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="28.0sp"
        android:gravity="center"
        android:text="@string/welcome" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        android:background="@android:color/darker_gray"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

    <EditText
        android:id="@+id/username_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_edit_hint"
        android:inputType="textNoSuggestions"
        android:maxLines="1"
        android:textIsSelectable="false"
        android:textSize="24.0sp"
        tools:text="Username" />

    <Button
        android:id="@+id/login_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        android:padding="16dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/button_border"
        android:textSize="24.0sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--android:background="@drawable/carefreebgscaledalphajpg" -->

        <ImageView
            android:id="@+id/image_srimark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:src="@drawable/srilogocolor" />

    </RelativeLayout>

</LinearLayout>